--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@expo/vector-icons": "^14.0.2",
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-navigation/native": "^6.0.2",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -30,18 +32,21 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-calendar-picker": "^8.0.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-ui-datepicker": "^2.0.4",
     "react-native-web": "~0.19.10",
-    "expo-camera": "~15.0.16"
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
