--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -21,15 +21,16 @@
     "@expo/vector-icons": "^14.0.2",
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.2",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.28",
+    "expo": "~51.0.38",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
