--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "expo": "~51.0.38",
     "expo-camera": "~15.0.16",
@@ -45,8 +47,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-ui-datepicker": "^2.0.4",
-    "react-native-web": "~0.19.10",
-    "@react-native-picker/picker": "2.7.5"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
