add new product screen

--- a/app.json
+++ b/app.json
@@ -12,23 +12,39 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.italomatos19.appdoacaoalimentos"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.italomatos19.appdoacaoalimentos"
+      "package": "com.italomatos19.appdoacaoalimentos",
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-camera"],
+    "plugins": [
+      "expo-router",
+      "expo-camera"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "c6978353-9468-43e2-aff5-c4fbd4cc00ec"
+      }
     }
   }
 }
