--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.38",
+    "expo": "~51.0.39",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -47,7 +47,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-ui-datepicker": "^2.0.4",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-dev-client": "~4.0.29"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
