--- a/package.json
+++ b/package.json
@@ -20,46 +20,48 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@pchmn/expo-material3-theme": "^1.3.2",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.39",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.21",
+    "expo-camera": "~16.0.10",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.6",
+    "expo-font": "~13.0.2",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.14",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "expo-web-browser": "~14.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-calendar-picker": "^8.0.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-paper-dropdown": "^2.3.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-ui-datepicker": "^2.0.4",
-    "react-native-web": "~0.19.10",
-    "expo-dev-client": "~4.0.29"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@testing-library/react-native": "^12.8.1",
     "@types/jest": "^29.5.14",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.7.0",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
