update app icon

--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "Cesta Solidaria",
+    "name": "Cesta Solidária",
     "slug": "app-doacao-alimentos",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/icon-cesta-rotary.png",
     "scheme": "myapp",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/icon-cesta-rotary.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -18,7 +18,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/icon-cesta-rotary.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.italomatos19.appdoacaoalimentos",
@@ -27,7 +27,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/icon-cesta-rotary.png"
     },
     "plugins": ["expo-router", "expo-camera", "expo-font"],
     "experiments": {
